--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body {
     font-family: 'Poppins', sans-serif;
     color: #333;
 }
+h1 p{
+    font-family: 'Times New Roman', Times, serif;
+}
 .hamburger{
     display: none;
 }
