--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     color: #333;
 }
 .hamburger{
+    
     display: none;
 }
 /* Navigation */
@@ -143,6 +144,14 @@ nav {
 
 /* Responsive */
 @media (max-width: 768px) {
+    button{
+        border: 2px solid white;
+    }
+    button.hamburger a{
+        color: black;
+        
+        text-decoration: none;
+    }
     .hamburger{
         display: inline-block;
     }
